[tool.poetry]
name = "banking_system"
version = "1.8.3"
description = "Banking system project"
authors = ["kishan <kishan@deftboxsolution.co.in>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^2.0"
sqlalchemy = "^1.4"
jose = "3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
